New entries should be added at the top

2004-08-27 Mathtext now more than 5x faster.  Thanks to Paul Mcguire
           for fixes both to pyparsing and to the matplotlib grammar!

2004-08-25 Exposed Darren's and Greg's log ticking and formatting
           options to semilogx and friends

2004-08-23 Fixed grid w/o args to toggle grid state - JDH

2004-08-11 Added Gregory's log patches for major and minor ticking

2004-08-18 Some pixel edge effects fixes for images

2004-08-18 Fixed TTF files reads in backend_ps on win32.  

2004-08-18 Added base and subs properties for logscale plots, user
           modifiable using
           set_[x,y]scale('log',base=b,subs=[mt1,mt2,...]) - GL

2004-08-18 fixed a bug exposed by trying to find the HOME dir on win32
           thanks to Alan Issac for pointing to the light - JDH

2004-08-18 fixed errorbar bug in setting ecolor - JDH

2004-08-12 Added Darren Dale's exponential ticking patch

2004-08-11 Added Gregory's fltkagg backend

==========================================================================
2004-08-09 matplotlib-0.61.0 released

2004-08-08 backend_gtk.py: get rid of the final PyGTK deprecation warning by 
           replacing gtkOptionMenu with gtkMenu in the 2.4 version of the 
           classic toolbar.

2004-08-06 Added Tk zoom to rect rectangle, proper idle drawing, and
           keybinding - JDH

2004-08-05 Updated installing.html and INSTALL - JDH

2004-08-01 backend_gtk.py: move all drawing code into the expose_event()

2004-07-28 Added Greg's toolbar2 and backend_*agg patches - JDH

2004-07-28 Added image.imread with support for loading png into
           numerix arrays

2004-07-28 Added key modifiers to events - implemented dynamic updates
           and rubber banding for interactive pan/zoom - JDH

2004-07-27 did a readthrough of SVG, replacing all the string
           additions with string interps for efficiency, fixed some
           layout problems, added font and image support (through