@@ -20,8 +20,8 @@ embedding_in_wx.py, which provides these features.
 
 Modification History:
 $Log$
-Revision 1.62  2004/08/30 18:52:58  jdh2358
-fixed stoopid mathtext bug
+Revision 1.63  2004/08/30 19:07:23  jdh2358
+sync to 0.62.4
 
 Revision 1.5  2004/06/26 06:37:20  astraw
 Trivial bugfix to eliminate IndexError
