@@ -29,5 +29,5 @@ figtext(0.1, 0.9, 'y')
 ax.set_xticks((a,b))
 ax.set_xticklabels(('a','b'))
 ax.set_yticks([])
-savefig('integral_demo')
+#savefig('integral_demo')
 show()
